--- a/x.html
+++ b/x.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     <h1>hello duniya jh</h1>
-</body>
+</body><h1>hello
+    </h1>
+    <h2>hello world</h2>
+    <h3>hello universe</h3>
+    <p><b>bold</b></p>
+    <p><i>hello</i></p>
+    <p><u>yoo</u></p>
+    <p><em>goooo</em></p>
+<p> <strong>hii</strong>
+</strong></p>
+<p><del>don't read this</del></p>
+<p><insert>what'sup</insert></p>
+    <P>H<sub>2</sub>O
+    </P>
+    <p>2<sup>2</sup>=4</p>
+    <p><S>thank you</S></p>
+    <p align="right"><small>pee pee</small></p><br></br>
+    <P><abbr title="Na(OH) sodium hydroxide">Na(OH) </abbr></P>
+<p align="center">fkhih</p>
+<hr>
+
+
+</p>
 </html>
