--- a/x.html
+++ b/x.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello duniya jh</h1>
+    <h1>hello duniya</h1>
 </body><h1>hello
     </h1>
     <h2>hello world</h2>
