--- a/x.html
+++ b/x.html
@@ -18,7 +18,7 @@
 <p> <strong>hii</strong>
 </strong></p>
 <p><del>don't read this</del></p>
-<p><insert>what'sup</insert></p>
+<ins>what'sup</ins>
     <P>H<sub>2</sub>O
     </P>
     <p>2<sup>2</sup>=4</p>
@@ -27,7 +27,25 @@
     <P><abbr title="Na(OH) sodium hydroxide">Na(OH) </abbr></P>
 <p align="center">brooo</p>
 <hr>
+<blockquote cite="https://www.youtube.com/"><h4>BLOG
+</h4>
+    This is a blog
+</blockquote>
+<pre>y     oo</pre>
+<q>MY NAME IS _______</q>
+<address>hello</address>
+<ol type="nummber" start="100" reversed><blockquote><b>GROCERY LIST</blockquote></b>
+    <li>potato
+    </li>
+    <li>bhendi</li>
+    <li>tomato</li>
+    <li>lasuun</li>
+</ol>    
+    <ul type="square">
+        <li>lays</li>
+        <li>balaji</li>
+        <li>kurkure</li>
+    </ul>
 
-
-</p>
+        
 </html>
