--- a/x.html
+++ b/x.html
@@ -41,7 +41,7 @@
     <li>tomato</li>
     <li>lasuun</li>
 </ol>    
-    <ul type="square">
+    <ul type="circle">
         <li>lays</li>
         <li>balaji</li>
         <li>kurkure</li>
