--- a/x.html
+++ b/x.html
@@ -9,7 +9,7 @@
     <h1>hello duniya</h1>
 </body><h1>hello
     </h1>
-    <h2>hello world</h2>
+    <h2 id="hello world">hello world</h2>
     <h3>hello universe</h3>
     <p><b>bold</b></p>
     <p><i>hello</i></p>
@@ -34,7 +34,7 @@
 <pre>y     oo</pre>
 <q>MY NAME IS _______</q>
 <address>hello</address>
-<ol type="nummber" start="100" reversed><blockquote><b>GROCERY LIST</blockquote></b>
+<ol type="number" start="100" reversed><blockquote><b>GROCERY LIST</blockquote></b>
     <li>potato
     </li>
     <li>bhendi</li>
@@ -46,6 +46,30 @@
         <li>balaji</li>
         <li>kurkure</li>
     </ul>
-
-        
+<table border="6">
+<tr>    <th>Roll no.</th>
+    <th>First name</th>
+<th>Last name</th></tr>
+<tr>
+    <td>101</td>
+    <td>Raj</td>
+    <td>Gupta</td>
+</tr>
+<tr>
+    <td>102</td>
+<td>Samay</td>
+<td>Dikshit</td>
+</tr>
+</table><br>
+<table border="3" cellspacing="3" cell padding="2" bgcolor="red">
+   <tr> <th colspan="2">Full Name</th>
+<th>Roll no</th></tr>
+<tr>
+    <td bgcolor="yellow">Anya</td>
+    <td>Forger</td>
+    <td>1</td>
+</tr> </table><br><br>
+<p>This youtube link</p>
+<a href="https://www.youtube.com/" >click kar</a><br><br>
+  <a href="#hello world">TOP</a>      
 </html>
